--- a/3practica/index.html
+++ b/3practica/index.html
@@ -100,6 +100,10 @@
                             USB. Para subir el Bootloader al microcontrolador se requiere de un ISP (In-circuit Serial Programmer), el cual se 
                             conecta a pines específicos del microcontrolador. En el caso de esta materia, el Arduino UNO es el que se usará como ISP 
                             para cargar todos los códigos al Attiny85 y que este pueda funcionar sin necesidad de conectarse a la computadora [2].</p>
+                            <p class="fs-6 mb-4">El Bootloader es un código ejecutado con cada reinicio que busca un archivo a subir mediante el puerto 
+                                USB. Para subir el Bootloader al microcontrolador se requiere de un ISP (In-circuit Serial Programmer), el cual se 
+                                conecta a pines específicos del microcontrolador. En el caso de esta materia, el Arduino UNO es el que se usará como ISP 
+                                para cargar todos los códigos al Attiny85 y que este pueda funcionar sin necesidad de conectarse a la computadora [2].</p>
                         
                         <p id="materiales">
                         <h2 class="fw-bolder mb-4 mt-5 fs-5" >- Materiales -</h2>
