--- a/index.html
+++ b/index.html
@@ -207,13 +207,98 @@
                                             <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
                                             <div class="small">
                                                 <div class="fw-bold">Daniela Monterrubio Palma</div>
-                                                <div class="text-muted">14 Septiembre, 2023</div>
+                                                <div class="text-muted">Septiembre 14, 2023</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <!--Tarjeta Práctica 5 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Push button</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Pantalla OLED</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 5: Circuito con pantalla OLED</h5>
+                                    <p class="card-text mb-0">La práctica 5 se enfocó en el uso básico de la pantalla OLED. El circuito para esto 
+                                        consistió en un botón en conjunto con la pantalla, por lo que se mandaba a imprimir cierto mensaje en la 
+                                        pantalla dependiendo de si el botón estaba presionado o no.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="5practica/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Daniela Monterrubio Palma</div>
+                                                <div class="text-muted">Septiembre 28, 2023</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!--Tarjeta Práctica 6 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Sensores analógicos, digitales e inteligentes</h5>
+                                    <p class="card-text mb-0">La práctica 6 dio a conocer los diferentes tipos de sensores. Estos sensores pueden 
+                                        clasificarse en 3: analógicos, digitales e inteligentes. Siendo así, se investigaron 30 sensores y se seleccionaron 
+                                        2 de cada tipo para elaborar un circuito de cada uno e identificar su funcionamiento, así como los pines a los que 
+                                        se deben conectar y los comandos necesarios para el código.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="6practica/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Daniela Monterrubio Palma</div>
+                                                <div class="text-muted">Octubre 4, 2023</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!--Tarjeta Proyecto Final-->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Proyecto Final: Wearable</h5>
+                                    <p class="card-text mb-0">Breve resumen de la práctica #. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="0practica/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Daniela Monterrubio Palma</div>
+                                                <div class="text-muted">Mes día, 2023</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <!--Tarjeta Práctica # -->
                         <div class="col-lg-4 mb-5">
