--- a/index.html
+++ b/index.html
@@ -250,8 +250,17 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensores analógicos</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensores digitales</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensores inteligentes</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Push button</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensor digital de flama</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Fotorresistencia</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensor de ruido pequeño</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensor ultrasónico</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensor de humedad</div></a>
                                     <h5 class="card-title mt-3 mb-1">Práctica 6: Sensores analógicos, digitales e inteligentes</h5>
                                     <p class="card-text mb-0">La práctica 6 dio a conocer los diferentes tipos de sensores. Estos sensores pueden 
                                         clasificarse en 3: analógicos, digitales e inteligentes. Siendo así, se investigaron 30 sensores y se seleccionaron 
