--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <!--Tarjeta Práctica 1 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P1.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">LED</div></a>
@@ -122,7 +122,7 @@
                         <!--Tarjeta Práctica 2 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P2.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Servomotor</div></a>
@@ -153,7 +153,7 @@
                         <!--Tarjeta Práctica 3 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P3.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
@@ -182,7 +182,7 @@
                         <!--Tarjeta Práctica 4 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P4.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
@@ -218,7 +218,7 @@
                         <!--Tarjeta Práctica 5 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P5.jpg" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
@@ -248,7 +248,7 @@
                         <!--Tarjeta Práctica 6 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/P6.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny85</div></a>
@@ -283,30 +283,7 @@
                         </div>
 
 
-                        <!--Tarjeta Proyecto Final-->
-                        <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
-                                <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Proyecto Final: Wearable</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica #. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
-                                </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="0practica/">Leer más</a></div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                                    <div class="d-flex align-items-end justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
-                                            <div class="small">
-                                                <div class="fw-bold">Daniela Monterrubio Palma</div>
-                                                <div class="text-muted">Mes día, 2023</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
 
 
                         <!--Tarjeta Práctica # -->
