--- a/index.html
+++ b/index.html
@@ -286,15 +286,23 @@
                         
 
 
-                        <!--Tarjeta Práctica # -->
+                        <!--Tarjeta Proyecto -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/Wearable.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Etiqueta</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica #: Titulo</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica #. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Attiny84</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Sensor ultrasónico</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Módulo de vibración</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Buzzer</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Push button</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Pantalla OLED</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Proyecto Final: A Prototype for a Wearable Device That Detects 
+                                        Obstacles for Wheelchair Users</h5>
+                                    <p class="card-text mb-0">El proyecto consistió en elaborar un dispositivo del tipo wearable dando 
+                                        solución a algún problema que observásemos. Elaborado en equipo, así como propuesto y aceptado 
+                                        para la Expo IBERO 2023.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="0practica/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -303,7 +311,7 @@
                                             <img class="rounded-circle me-3" src="assets/Dani.jpeg" alt="..." width="40px">
                                             <div class="small">
                                                 <div class="fw-bold">Daniela Monterrubio Palma</div>
-                                                <div class="text-muted">Mes día, 2023</div>
+                                                <div class="text-muted">Diciembre 4, 2023</div>
                                             </div>
                                         </div>
                                     </div>
